--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         <button onclick="searchBook()" class="btn btn-outline-secondary" type="button"
             id="button-search">search</button>
     </div>
+    <!-- Error message for no result -->
     <div>
         <p id="error-message" class=" text-danger text-center">Something went wrong please try again later</p>
-    </div>
-
-    <!-- Author details -->
-    <div id="author-details" class=" w-50 mx-auto">
     </div>
 
     <!-- book search result -->
@@ -34,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-   <!-- <script src="meal-async.js"></script> -->
+        
    <script src="main.js"></script>
 </body>
 
